--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-This is an attempt to make the Ganglia UI more usable.  Installation instructions
-can be found here
-
-https://github.com/ganglia/ganglia-web/wiki#Installation
+Aquarius Networks Web Monitor 2017
